fix: prevent Venus General SlashBlade sweeping attribute crash
SlashBlade Resharped 2.0.7 queries the player-only sweeping_damage_ratio attribute from the owner of EntitySlashEffect even when that owner is a mob. Register the neutral sweeping ratio and the expected interaction range directly on Venus General, which uses its own AttributeSupplier instead of the regular Venus Zombie supplier.

Add a GameTest that instantiates the boss and locks both SlashBlade-required attributes so this crash cannot silently return.